--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,12 +40,16 @@ section#login {
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.281);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
     background: #5A86BF url(../imagens/paisagem.jpg) no-repeat;
     background-size: cover;
+    background-position: center center;
     height: 200px;
 }
 
