--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -40,4 +40,12 @@
         float: left;
         width: 55%;
     }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+    
+    div#formulario > p {
+        font-size: 1.2em;
+    }
 }
