--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 800px) and (max-width: 992px) {
-    body {
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    body, html {
         background-image: linear-gradient(to bottom, #9368A6, #5A86BF);
     }
 
@@ -23,7 +23,7 @@
 }
 
 @media screen and (min-width: 993px) {
-    body {
+    body, html {
         background-image: linear-gradient(to bottom, #9368A6, #5A86BF);
     }
 
