--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -3,6 +3,8 @@
 @media screen and (min-width: 768px) and (max-width: 992px) {
     body, html {
         background-image: linear-gradient(to bottom, #9368A6, #5A86BF);
+        height: 100vh;
+        width: 100vw;
     }
 
     section#login {
@@ -25,6 +27,8 @@
 @media screen and (min-width: 993px) {
     body, html {
         background-image: linear-gradient(to bottom, #9368A6, #5A86BF);
+        height: 100vh;
+        width: 100vw;
     }
 
     section#login {
