--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,11 +2,8 @@
 
 /*
     Paleta de Cores:
-    Cor001: #F2A7D0
-    Cor002: #D98FBF
-    Cor003: #9368A6
-    Cor004: #5A86BF
-    Cor005: #6B98BF
+    Cor001: Magenta;
+    Cor002: Cyan;
 */
 
 * {
@@ -17,7 +14,7 @@
 }
 
 body, html {
-    background-color: #9368A6;
+    background-color: magenta;
     height: 100vh;
     width: 100vw;
 }
@@ -40,8 +37,6 @@ section#login {
     overflow: hidden;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.281);
 
-    transition: width .3s, height .3s;
-    transition-timing-function: ease;
     transform: translate(-50%, -50%);
 }
 
@@ -64,6 +59,7 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+    text-align: center;
     font-size: 0.9em;
 }
 
@@ -73,20 +69,11 @@ label {
 
 div.campo > span {
     color: white;
-    font-size: 2.1em;
+    font-size: 2em;
     width: 40px;
     padding: 4px;
-}
 
-div.campo > input {
-    font-size: 1em;
-    background-color: #7ab4ff;
-    height: 85%;
-    width: calc(100% - 47px);
-    border: none;
-    border-radius: 8px;
-    padding: 4px;
-    transform: translateY(-12px);
+    transform: translate(3px);
 }
 
 div.campo > input:focus-within {
@@ -95,11 +82,21 @@ div.campo > input:focus-within {
 
 form > div.campo {
     display: block;
-    background-color: #D98FBF;
-    border-radius: 8px;
+    background-color: magenta;
+    border-radius: 20px;
     width: 100%;
     height: 40px;
-    margin: 5px 0px;
+    margin: 10px 0px;
+}
+
+div.campo > input {
+    background-color: rgb(150, 255, 255);
+    height: 85%;
+    width: calc(100% - 47px);
+    border: none;
+    border-radius: 20px;
+    padding: 4px;
+    transform: translateY(-11px);
 }
 
 form > input[type=submit] {
@@ -107,30 +104,38 @@ form > input[type=submit] {
     font-size: 1em;
     width: 100%;
     height: 40px;
-    border: none;
-    background-color: #5A86BF;
-    color: white;
-    border-radius: 5px;
+    border: 2px solid darkcyan;
+    background-color: cyan;
+    color: darkcyan;
+    border-radius: 10px;
     cursor: pointer;
 }
 
 form > input[type=submit]:hover {
-    background-color: #385377;
+    background-color: darkcyan;
+    color: white;
+
 }
 
-.botao {
+form > .botao {
     display: block;
     text-align: center;
     font-size: 1em;
     text-decoration: none;
     width: 100%;
     height: 40px;
-    background-color: #F2A7D0;
-    border-radius: 5px;
+    background-color: white;
+    border-radius: 10px;
+    border: 2px solid magenta;
     margin-top: 10px;
-    color: #683752;
+    color: magenta;
+}
+
+form > .botao > span {
+    transform: translateY(6px);
 }
 
 .botao:hover {
-    background-color: #D98FBF;
+    background-color: magenta;
+    color: white;
 }
