--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -2,9 +2,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     body, html {
-        background-image: linear-gradient(to bottom, #9368A6, #5A86BF);
-        height: 100vh;
-        width: 100vw;
+        background-image: linear-gradient(to bottom, magenta, cyan);
     }
 
     section#login {
@@ -22,13 +20,22 @@
         float: right;
         width: 65%;
     }
+
+    form > input[type=submit] {
+        width: 250px;
+        margin: auto;
+        margin-bottom: 10px;
+    }
+
+    form > .botao {
+        width: 250px;
+        margin: auto;
+    }
 }
 
 @media screen and (min-width: 993px) {
     body, html {
-        background-image: linear-gradient(to bottom, #9368A6, #5A86BF);
-        height: 100vh;
-        width: 100vw;
+        background-image: linear-gradient(to bottom, magenta, cyan);
     }
 
     section#login {
@@ -54,5 +61,16 @@
     div#formulario > p {
         font-size: 1em;
         padding: 10px 0px;
+    }
+
+    form > input[type=submit] {
+        width: 300px;
+        margin: auto;
+        margin-bottom: 10px;
+    }
+
+    form > .botao {
+        width: 300px;
+        margin: auto;
     }
 }
