--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@
 }
 
 body, html {
-    background-color: magenta;
+    background-color: rgb(139, 0, 139);
     height: 100vh;
     width: 100vw;
 }
