--- a/estilos/style.css
+++ b/estilos/style.css
@@ -105,15 +105,16 @@ form > input[type=submit] {
     width: 100%;
     height: 40px;
     border: 2px solid darkcyan;
-    background-color: cyan;
+    background-color: ;
     color: darkcyan;
     border-radius: 10px;
     cursor: pointer;
 }
 
 form > input[type=submit]:hover {
-    background-color: darkcyan;
-    color: white;
+    border: none;
+    background-color: cyan;
+    color: black;
 
 }
 
