--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -36,6 +36,9 @@
 @media screen and (min-width: 993px) {
     body, html {
         background-image: linear-gradient(to bottom, magenta, cyan);
+        
+        height: 100vh;
+        width: 100vw;
     }
 
     section#login {
